RESOLVED FIXED260060
[visionOS] WKContentView doesn't relinquish first responder after tapping Safari unified field
https://bugs.webkit.org/show_bug.cgi?id=260060
Summary [visionOS] WKContentView doesn't relinquish first responder after tapping Saf...
Ryan Fuller
Reported 2023-08-10 21:59:58 PDT
WKContentView has logic to prevent resigning of firstResponder status when it is resigning due to a keyboard dismissal request (and it is the FR already). This is because in that case it will becomeFirstResponder right after anyway. The issue is that sometime the notification of the keyboard dismissal does not happen right away, and in that case, it incorrectly does not resign first responder. We can make this logic (deciding to not resign FR) more robust by gating on `_isEditable` as well, which prevents this bad state.
Attachments
Wenson Hsieh
Comment 1 2023-08-11 09:06:18 PDT
Ryan Fuller
Comment 2 2023-08-11 16:09:03 PDT
EWS
Comment 3 2023-08-14 07:30:21 PDT
Committed 266863@main (8222cb10b1d0): <https://commits.webkit.org/266863@main> Reviewed commits have been landed. Closing PR #16628 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.