Cherry-pick 8222cb10b1d0. rdar://problem/113732040

[visionOS] WKContentView doesn't relinquish first responder after tapping Safari unified field
    https://bugs.webkit.org/show_bug.cgi?id=260060
    rdar://113732040

    Reviewed by Wenson Hsieh.

    The keyboard request dismissal can happen *after* the firstResponder chain
    is affected by the dismissal and in fact this does happen on visionOS. By
    also checking _isEditable we ensure that even if the firstResponder is the
    content view but was not before the dismissal, we don't incorrectly set the
    keyboard lock to true (blocking the next attempted resignation), as
    _isEditable is not yet true in this case.

    * Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:
    (-[WKContentView _keyboardDidRequestDismissal:]):
    Require the content view is firstResponder AND editable to block the next
    firstResponder resignation attempt.

    Canonical link: https://commits.webkit.org/266863@main

Identifier: 265870.372@safari-7616-branch